# rust-axum-template

./: Cargo.toml  README.md  google_oauth2.rs  icici_derict.rs  mod.rs  rustfmt.toml
.Cargo/: config.toml
examples/: quick_dev.rs
sql/migrations/: 20230922130651_user.up.sql
src/: config.rs  error.rs  main.rs
src/crypt/: error.rs  mod.rs  token.rs
src/ctx/: error.rs  mod.rs
src/log/: mod.rs
src/model/: error.rs  mod.rs  user.rs
src/model/store/: mod.rs
src/web/: error.rs  mod.rs
src/web/middelware/: auth.rs  mod.rs  res_map.rs
src/web/routes/: auth.rs  health_check.rs  mod.rs  user.rs
