[package]
name = "rust-axum-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
# -- Json
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_with = "3.3.0"
# -- Web
axum = "0.6.20"
tower-http = { version = "0.4.4", features = ["fs"] }
tower-cookies = "0.9.0"
# -- Data
sqlx = { version = "0.7.1", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "time",
] }
sqlb = "0.4.0" # Optional
# -- Tracing
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
# -- Crypt & Encoding
rand = "0.8.5"
hmac = "0.12.1"
sha2 = "0.10.7"
base64-url = "2.0.0"
# -- Others
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
time = "0.3.28"
lazy-regex = "3.0.2"
async-trait = "0.1.73"
strum_macros = "0.25.2"
base64 = "0.21.4"
reqwest = { version = "0.11.20", features = ["json"] }
jwt = "0.16.0"


[dev-dependencies]
anyhow = "1.0.75"
httpc-test = "0.1.5"
serial_test = "2.0.0"
